--- a/netlify.toml
+++ b/netlify.toml
@@ -14,27 +14,30 @@
 
 # Production context
 [context.production]
-  command = "npm run build:production"
+  command = "npm ci && npm run build"
   
 [context.production.environment]
   NODE_ENV = "production"
   NEXT_PUBLIC_ENV = "production"
+  NEXT_TELEMETRY_DISABLED = "1"
 
 # Deploy preview context  
 [context.deploy-preview]
-  command = "npm run build:preview"
+  command = "npm ci && npm run build"
   
 [context.deploy-preview.environment]
   NODE_ENV = "development"
   NEXT_PUBLIC_ENV = "preview"
+  NEXT_TELEMETRY_DISABLED = "1"
 
 # Branch deploys
 [context.branch-deploy]
-  command = "npm run build:staging"
+  command = "npm ci && npm run build"
   
 [context.branch-deploy.environment]
   NODE_ENV = "staging"
   NEXT_PUBLIC_ENV = "staging"
+  NEXT_TELEMETRY_DISABLED = "1"
 
 # Asset optimization
 [build.processing]
