--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "dev": "next dev",
     "build": "next build",
     "build:production": "NODE_ENV=production next build",
-    "build:preview": "NODE_ENV=development next build", 
+    "build:preview": "NODE_ENV=development next build",
     "build:staging": "NODE_ENV=staging next build",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "type-check": "tsc --noEmit",
     "analyze": "ANALYZE=true npm run build",
-    "clean": "rm -rf .next out",
+    "clean": "npx rimraf .next out",
     "prebuild": "npm run clean",
     "test": "echo \"No tests specified\" && exit 0"
   },
@@ -25,6 +25,7 @@
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.3",
+    "@supabase/ssr": "^0.6.1",
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.0",
@@ -51,6 +52,7 @@
     "@types/react-dom": "^18.3.7",
     "eslint": "^8.51.0",
     "eslint-config-next": "^14.0.0",
+    "rimraf": "^5.0.5",
     "typescript": "^5.2.2",
     "webpack-bundle-analyzer": "^4.9.1"
   },
@@ -60,7 +62,7 @@
       "not dead",
       "not op_mini all"
     ],
-    "development": [  
+    "development": [
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
