--- a/package.json
+++ b/package.json
@@ -43,17 +43,17 @@
     "react-icons": "^5.5.0",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.8.3",
+    "@types/node": "^24.1.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^24.1.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
     "eslint": "^8.51.0",
     "eslint-config-next": "^14.0.0",
     "rimraf": "^5.0.5",
-    "typescript": "^5.8.3",
     "webpack-bundle-analyzer": "^4.9.1"
   },
   "browserslist": {
