Deploy MedDefi MVP codebase - production ready
- Complete Next.js frontend with TypeScript and Tailwind CSS
- Supabase authentication and user management integration
- Patient and medic dashboard interfaces with user context
- Static export configuration optimized for deployment
- Environment variables and build configuration for production
- UI components library with consistent design system
- Onboarding flow with user type selection and profile creation
- Ready for backend API integration phase

Excludes documentation files for internal development use

--- a/.gitignore
+++ b/.gitignore
@@ -97,4 +97,12 @@ jspm_packages/
 .yarn/unplugged
 .yarn/build-state.yml
 .yarn/install-state.gz
-.pnp.* 
+.pnp.*
+
+# Documentation files (keep local only)
+BACKEND_API_DOCUMENTATION.md
+DEPLOYMENT-CHECKLIST.md
+DOCTOR_BOOKING_README.md
+ELIMINATED_FEATURES.md
+WORKFLOW_INTEGRATION_ANALYSIS.md
+netlify-deployment-guide-2024.md 
