Add complete blockchain integration with real-time debugging terminal
- Add TypeScript types for WalletDash API integration (src/types/walletdash-api.ts)
- Add WalletDash integration service with all 16 API endpoints (src/services/walletdash-integration.ts)
- Add database integration service for Supabase operations (src/services/database-integration.ts)
- Add TestingTerminal component for real-time blockchain/API/database debugging
- Add UnifiedRegistrationForm for both patient and medic user creation
- Add MedicDashboard for practice and service management
- Add PatientDashboard for service browsing and purchasing
- Add integration demo page at /integration-demo
- Add complete database setup SQL script with all tables and views
- Add comprehensive documentation (DATABASE_IMPLEMENTATION_GUIDE.md, INTEGRATION_DEMO_README.md)
- Update env.example with all required environment variables
- Remove outdated deployment documentation files

 Ready for production deployment with real STRK blockchain integration!

--- a/env.example
+++ b/env.example
@@ -1,51 +1,64 @@
-# MedDefi MVP Environment Variables
-# Copy this file to .env.local for development
+# MedDefi MVP Environment Configuration
+# Copy this file to .env.local and fill in your actual values
 
-# ===========================================
-# REQUIRED ENVIRONMENT VARIABLES
-# ===========================================
+# =============================================
+# SUPABASE CONFIGURATION
+# =============================================
+NEXT_PUBLIC_SUPABASE_URL=your-supabase-project-url
+SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
 
-# Supabase Configuration
-NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
+# =============================================
+# WALLETDASH API CONFIGURATION
+# =============================================
+NEXT_PUBLIC_WALLETDASH_API_URL=https://backend-medefi-walletdash.up.railway.app
+NEXT_PUBLIC_WALLETDASH_API_TIMEOUT=10000
 
-# Backend API URLs
-NEXT_PUBLIC_BACKEND_URL=https://api.meddefi.com
-NEXT_PUBLIC_WALLET_DASH_URL=https://wallet.meddefi.com
-
-# ===========================================
-# OPTIONAL ENVIRONMENT VARIABLES  
-# ===========================================
-
-# Application Environment
-NEXT_PUBLIC_ENV=development
+# =============================================
+# DEVELOPMENT CONFIGURATION
+# =============================================
 NODE_ENV=development
+DATABASE_POOL_SIZE=10
 
-# Site Configuration
-NEXT_PUBLIC_SITE_URL=http://localhost:3000
-NEXT_PUBLIC_SITE_NAME=MedDefi MVP
+# =============================================
+# FRONTEND CONFIGURATION
+# =============================================
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_APP_NAME=MedDefi MVP
 
-# Analytics & Monitoring (Optional)
-NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
-NEXT_PUBLIC_SENTRY_DSN=https://your-sentry-dsn
+# =============================================
+# BLOCKCHAIN CONFIGURATION (Optional)
+# =============================================
+# These are handled by the WalletDash API, but can be used for frontend display
+NEXT_PUBLIC_BLOCKCHAIN_NETWORK=Starknet Sepolia Testnet
+NEXT_PUBLIC_BLOCKCHAIN_EXPLORER=https://sepolia.starkscan.co
 
-# ===========================================
-# DEVELOPMENT ONLY
-# ===========================================
+# =============================================
+# ANALYTICS & MONITORING (Optional)
+# =============================================
+# Add your analytics services here
+# NEXT_PUBLIC_GOOGLE_ANALYTICS=your-ga-id
+# SENTRY_DSN=your-sentry-dsn
 
-# Build Optimization
-ANALYZE=false
-NEXT_TELEMETRY_DISABLED=1
+# =============================================
+# EMAIL CONFIGURATION (For Future Use)
+# =============================================
+# SMTP_HOST=your-smtp-host
+# SMTP_PORT=587
+# SMTP_USER=your-smtp-user
+# SMTP_PASS=your-smtp-password
 
-# ===========================================
-# PRODUCTION ENVIRONMENT VARIABLES
-# ===========================================
+# =============================================
+# EXAMPLE VALUES FOR TESTING
+# =============================================
+# NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+# SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+# NEXT_PUBLIC_WALLETDASH_API_URL=https://backend-medefi-walletdash.up.railway.app
+# NEXT_PUBLIC_WALLETDASH_API_TIMEOUT=10000
 
-# These should be set in Netlify dashboard:
-# NEXT_PUBLIC_SUPABASE_URL=https://your-prod-project.supabase.co
-# SUPABASE_SERVICE_ROLE_KEY=your-prod-service-role-key
-# NEXT_PUBLIC_BACKEND_URL=https://api.meddefi.com
-# NEXT_PUBLIC_WALLET_DASH_URL=https://wallet.meddefi.com
-# NEXT_PUBLIC_SITE_URL=https://meddefi.netlify.app
-# NEXT_PUBLIC_ENV=production
-# NODE_ENV=production 
+# =============================================
+# SECURITY NOTES
+# =============================================
+# - Never commit .env.local to version control
+# - Keep SUPABASE_SERVICE_ROLE_KEY secure - it has admin privileges
+# - WalletDash API URL is public but requires proper authentication
+# - Use environment-specific values (dev/staging/prod) 
