--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.52.1",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/node": "^24.1.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.0",
     "bcryptjs": "^3.0.2",
@@ -44,10 +48,7 @@
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.8.3",
-    "@types/node": "^24.1.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6"
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
